# pg_vectorize

./: INSTALLATION.md  README.md  docker-compose.yml
.github/workflows/: build-vector-serve.yml  extension_ci.yml  pg-image-build.yml  server_ci.yml  server_release.yml
core/: Cargo.toml
core/src/: db.rs  errors.rs  init.rs  query.rs  types.rs
core/src/transformers/providers/: mod.rs  openai.rs
core/src/worker/: base.rs  ops.rs
docs/server/api/: search.md
extension/: Cargo.toml  README.md
extension/sql/: example.sql  init_table.sql
extension/src/: api.rs  executor.rs  init.rs  search.rs
extension/src/chat/: ops.rs
extension/src/workers/: mod.rs
proxy/src/: cache.rs  message_parser.rs  proxy.rs
server/: Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
server/src/: app_state.rs  errors.rs  executor.rs  init.rs  lib.rs  main.rs  server.rs
server/src/core/: query.rs
server/src/core/transformers/: generic.rs
server/src/core/transformers/providers/: vector_serve.rs
server/src/core/worker/: base.rs
server/src/routes/: search.rs  table.rs
server/tests/: tests.rs  util.rs
vector-serve/: Dockerfile  pyproject.toml
vector-serve/app/: models.py
vector-serve/tests/: test_endpoints.py
worker/src/: executor.rs  lib.rs
