[package]
name = "server"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "vectorize_server"
path = "src/lib.rs"

[dependencies]
vectorize_core = { path = "../core", package = "vectorize-core"}

actix-cors = "0.7.1"
actix-http = "3.11.0"
actix-rt = "2.10.0"
actix-service = "2.0.3"
actix-web = "4.11.0"
chrono = {version = "0.4.41", features = ["serde"] }
env_logger = "0.11.8"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio-native-tls", "postgres", "chrono", "json", "uuid"]}
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui  = { version = "7", features = ["actix-web"] }
log = "0.4.27"
anyhow = "1.0.98"
reqwest = "0.12.16"
env = "1.0.1"
rand = "0.9.1"
tiktoken-rs = "0.7.0"
