[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    { name = "Adam Hendel", email = "adam@hendel.dev" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "sentence-transformers>=5",
    "torch>=2.4.1",
    "einops>=0.8.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "huggingface-hub>=1.0.0",
    "transformers>=5.6.0",
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest>=9",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
